# Thona-ETL_v2

./: .env.example  pyproject.toml  scaffold_repo.py
config/: .env  config.json
configs/: app.yaml
configs/sql/redshift/: 001_create_etl_log_cargas.sql
src/etl/clients/: oracle_client.py  redshift_client.py  thona_api_client.py
src/etl/config/: loader.py  settings.py
src/etl/extract/: api_extract.py  oracle_extract.py
src/etl/flows/: recibos_flow.py
src/etl/load/: redshift_load.py  upsert.py
src/etl/logging/: etl_log_repo.py  models.py
src/etl/transform/: validators.py
src/etl/utils/: ids.py  time.py
src/thona_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit/: test_validators.py
